[package]
name = "rusty-leveldb"
version = "3.0.0"
authors = ["Lewin Bormann <lbo@spheniscida.de>"]
description = "A compatible re-implementation of LevelDB in Rust"
homepage = "https://github.com/dermesser/leveldb-rs"
repository = "https://github.com/dermesser/leveldb-rs"
readme = "README.md"
keywords = ["LevelDB", "key-value", "database", "SSTable", "Google"]
license = "MIT"
publish = true
edition = "2021"
include = ["src/**/*", "src/*", "Cargo.toml", "LICENSE", "README.md"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crc = "3.2"
integer-encoding = "3.0"
rand = "0.8.5"
snap = "1.0"

errno = { optional = true, version = "0.2" }
fs2 = { optional = true, version = "0.4.3" }

tokio = { optional = true, features = ["rt", "sync"], version = "1.39.3" }
async-std = { optional = true, version = "1.12.0" }

[features]
default = ["fs"]
async = ["asyncdb-tokio"]
asyncdb-tokio = ["dep:tokio", "asyncdb"]
asyncdb-async-std = ["dep:async-std", "asyncdb"]
asyncdb = []
fs = ["errno", "fs2"]

[dev-dependencies]
time-test = "0.2"
bencher = "0.1"

[[bench]]
name = "maps_bench"
harness = false
path = "src/benches/maps_bench.rs"

[workspace]
members = [
    "examples/write-a-lot",
    "examples/leveldb-tool",
    "examples/word-analyze",
    "examples/stresstest",
    "examples/asyncdb-tokio",
    "examples/asyncdb-async-std",
    "examples/mcpe",
    "examples/kvserver",
]
