[package]
name = "rusty-leveldb"
version = "4.0.0"
authors = ["Lewin Bormann <lbo@spheniscida.de>"]
description = "A compatible re-implementation of LevelDB in Rust"
homepage = "https://github.com/dermesser/leveldb-rs"
repository = "https://github.com/dermesser/leveldb-rs"
readme = "README.md"
keywords = ["LevelDB", "key-value", "database", "SSTable", "Google"]
license = "MIT"
publish = true
edition = "2021"
include = ["src/**/*", "src/*", "Cargo.toml", "LICENSE", "README.md"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crc32c = "0.6.8"
integer-encoding = "3.0"
bytes = "1.10.1"
rand = "0.8.5"
snap = "1.0"

errno = { optional = true, version = "0.2" }
fs2 = { optional = true, version = "0.4.3" }

tokio = { optional = true, features = ["rt", "sync"], version = "1.39.3" }
async-std = { optional = true, version = "1.12.0" }
wasm-bindgen-futures = { optional = true, version = "0.4.24" }
getrandom = { optional = true, version = "0.2.15", features = ["js"] }

[features]
default = ["fs", "asyncdb-wasm-bindgen-futures"]
async = ["asyncdb-tokio"]
asyncdb-tokio = ["tokio"]
asyncdb-async-std = ["async-std"]
asyncdb-wasm-bindgen-futures = [
    "wasm-bindgen-futures",
    "async-std/async-channel",
    "getrandom",
]
fs = ["errno", "fs2"]

[dev-dependencies]
time-test = "0.3"
bencher = "0.1"
wasm-bindgen-test = "0.3.0"

[[bench]]
name = "maps_bench"
harness = false
path = "src/benches/maps_bench.rs"

[workspace]
members = [
  "examples/write-a-lot",
  "examples/leveldb-tool",
  "examples/word-analyze",
  "examples/stresstest",
  "examples/asyncdb-tokio",
  "examples/asyncdb-async-std",
  "examples/mcpe",
  "examples/kvserver",
]
