[package]
name = "asyncdb-async-std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
rusty-leveldb = { path = "../../", features = ["asyncdb-async-std"] }
